--- a/src/extra_model_paths.yaml
+++ b/src/extra_model_paths.yaml
@@ -1,6 +1,7 @@
 runpod_worker_comfy:
   base_path: /runpod-volume
   checkpoints: models/checkpoints/
+  diffusion_models: models/diffusion_models/
   clip: models/clip/
   clip_vision: models/clip_vision/
   configs: models/configs/
@@ -10,3 +11,4 @@ runpod_worker_comfy:
   upscale_models: models/upscale_models/
   vae: models/vae/
   unet: models/unet/
+  text_encoders: models/text_encoders/
